# craftgame

./: .clangd  .gitignore  CMakeLists.txt  README.md  build-and-run.bat  build-and-run.sh
src/: main.cpp  map.cpp  map.h  player.cpp  player.h
